cluster-manifests/cluster-baseline-settings/osm/osm.yaml
apiVersion: v1
kind: Service
metadata:
  name: osm-controller
  namespace: cluster-baseline-settings
  labels:
    app: osm-controller
spec:
  ports:
    - name: osm-port
      port: 15128
      targetPort: 15128
    - name: sidecar-injector
      port: 9090
      targetPort: 9090
    - name: debug-port
      port: 9092
      targetPort: 9092
  selector:
    app: osm-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osm-controller
  labels:
    app: osm-controller
    meshName: osm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osm-controller
  template:
    metadata:
      labels:
        app: osm-controller
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9091'
    spec:
      serviceAccountName: cluster-osm
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
      tolerations:
      - effect: NoExecute
        key: pci-scope
        operator: Equal
        value: out-of-scope
      containers:
        - name: osm-controller
          image: mcr.microsoft.com/oss/openservicemesh/osm-controller:v0.7.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: "admin-port"
              containerPort: 15000
            - name: "osm-port"
              containerPort: 15128
            - name: "metrics"
              containerPort: 9091
          command: ['/osm-controller']
          args: [
            "--verbosity", "info",
            "--osm-namespace", "cluster-baseline-settings",
            "--mesh-name", "osm",
            "--init-container-image", "mcr.microsoft.com/oss/openservicemesh/init:v0.7.0",
            "--sidecar-image", "$(ACR_INSTANCE).azurecr.io/live/envoyproxy/envoy-alpine:v1.17.0",
            "--webhook-config-name", "osm-webhook-osm",
            "--ca-bundle-secret-name", "osm-ca-bundle",
            "--certificate-manager", "tresor"
          ]
          resources:
            limits:
              cpu: 1500m
              memory: 256Mi
            requests:
              cpu: 500m
              memory: 32Mi
          readinessProbe:
            initialDelaySeconds: 1
            timeoutSeconds: 5
            httpGet:
              scheme: HTTP
              path: /health/ready
              port: 9091
          livenessProbe:
            initialDelaySeconds: 1
            timeoutSeconds: 5
            httpGet:
              scheme: HTTP
              path: /health/alive
              port: 9091
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app: osm-controller
  name: osm-webhook-osm
webhooks:
- name: osm-inject.k8s.io
  clientConfig:
    service:
      name: osm-controller
      namespace: cluster-baseline-settings
      path: /mutate-pod-creation
      port: 9090
  failurePolicy: Fail
  matchPolicy: Exact
  namespaceSelector:
    matchLabels:
      openservicemesh.io/monitored-by: osm
    matchExpressions:
      # This label is explicitly set to ignore a namespace
      - key: "openservicemesh.io/ignore"
        operator: DoesNotExist
      - key: "name"
        operator: NotIn
        values:
        - cluster-baseline-settings
        - flux-system
        - falco-system
        - kube-system
        - kube-node-lease
        - kube-public
        - gatekeeper-system
  rules:
    - apiGroups:
        - ""
      apiVersions:
        - v1
      operations:
        - CREATE
      resources:
        - pods
